[tool.poetry]
name = "Wallets"
version = "0.1.0"
description = ""
authors = ["IK <ivandkyulev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
requests = "^2.28.1"
tabulate = "^0.8.10"
stem = "^1.8.0"
PySocks = "^1.7.1"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
